[package]
name = "wasm-regex"
version = "0.1.0"
authors = ["Jonathan Troyer <jonathantroyer@outlook.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
none = []

[dependencies]
wasm-bindgen = "0.2.70"
regex = {default-features = false, features = ["unicode-bool", "unicode-case", "unicode-gencat", "unicode-perl", "unicode-script", "std"], version = "1"}
serde = {version = "1.0.147", features = ["derive"]}
serde_json = "1.0.88"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
