[package]
name = "wasm-regex"
version = "0.1.0"
authors = [
    "Jonathan Troyer <jonathantroyer@outlook.com>",
    "Andrew Gallant <jamslam@gmail.com>",
    "Maximilian Goisser <goisser94@gmail.com>",
    "Firas Dib <firas.dib@gmail.com>",
    "Trevor Gross <tmgross@umich.edu>"
]
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
none = []

[dependencies]
wasm-bindgen = "0.2.83"
regex = {default-features = false, features = [
    "unicode-bool","unicode-case", "unicode-gencat", "unicode-perl", "unicode-script",
    "std"], version = "1"}
serde = {version = "1.0.147", default-features = false, features = ["derive"]}
serde-wasm-bindgen = "0.4"
# serde-wasm-bindgen = { path = "../serde-wasm-bindgen" }

[dev-dependencies]
wasm-bindgen-test = "0.3.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz"]
