[package]
name = "wasm-regex"
version = "0.1.0"
authors = [
    "Jonathan Troyer <jonathantroyer@outlook.com>",
    "Andrew Gallant <jamslam@gmail.com>",
    "Maximilian Goisser <goisser94@gmail.com>",
    "Firas Dib <firas.dib@gmail.com>",
    "Trevor Gross <tmgross@umich.edu>"
]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
none = []

[dependencies]
wasm-bindgen = "0.2.83"
regex = { version = "1", default-features = false, features = ["unicode-bool","unicode-case", "unicode-gencat", "unicode-perl", "unicode-script", "std"] }
regex-syntax = { version = "0.6.28", default-features = false, features = ["unicode-bool","unicode-case", "unicode-gencat", "unicode-perl", "unicode-script"] }
serde = { version = "1.0.147", default-features = false, features = ["derive"] }
serde-wasm-bindgen = "0.4"
# serde-wasm-bindgen = { path = "../serde-wasm-bindgen" }

[dev-dependencies]
wasm-bindgen-test = "0.3.0"

[profile.release]
# enable "z" or "s" for smaller binaries, 3 for speed optimization
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[package.metadata.wasm-pack.profile.release]
# Use -Oz for small size or -O3 for faster runtime
wasm-opt = ["-O3"]

[package.metadata.wasm-pack.profile.profiling]
# Make sure the -O flag matches `.release` to avoid confusion
wasm-opt = ['-O3', '-g']
